--- a/singolo1.css
+++ b/singolo1.css
@@ -16,8 +16,21 @@ html {
 }
 
 body {
+  font-weight: 400;
   font-size: 1.2rem;
   font-family: Lato, Verdana, sans-serif;
+}
+
+h2 {
+  font-weight: 900;
+  font-size: 30px;
+  line-height: 20px;
+}
+
+h3 {
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 20px;
 }
 
 .visuallyhidden {
@@ -150,9 +163,12 @@ body {
   width: 16px;
   height: 27px;
 
-  background-color: transparent;
-  border: transparent;
   cursor: pointer;
+  opacity: 0.7;
+}
+
+.slider__button:hover {
+  opacity: 1;
 }
 
 .slider__button_left {
@@ -179,4 +195,63 @@ body {
 .phone__horizontal {
   top: 173px;
   left: 424px;
+}
+
+.our-services {
+  position: relative;
+
+  height: 500px;
+
+  background: #f2f2f2;
+}
+
+.our-services::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+
+  width: 100%;
+  height: 6px;
+
+  background-color: #ffffff;
+}
+
+.our-services__wrapper {
+  padding: 67px 40px 20px;
+}
+
+.our-services__description {
+  margin: 25px 0;
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: justify;
+}
+
+.layout-3-column {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.service {
+  position: relative;
+
+  box-sizing: border-box;
+  width: 300px;
+  padding: 20px 0 10px 80px;
+}
+
+.service img {
+  position: absolute;
+  top: 22px;
+  left: 0;
+}
+
+.service__description {
+  margin-top: 8px;
+
+  line-height: 22px;
+  text-align: justify;
 }
