--- a/singolo2.css
+++ b/singolo2.css
@@ -18,7 +18,7 @@ html {
 body {
   font-weight: 400;
   font-size: 1.2rem;
-  font-family: Lato, Verdana, sans-serif;
+  font-family: "Lato", Verdana, sans-serif;
 }
 
 h2 {
@@ -37,4 +37,105 @@ h3 {
   box-sizing: border-box;
   max-width: 1020px;
   margin: auto;
+}
+
+/* portfolio ***************************************************/
+
+.portfolio {
+  position: relative;
+
+  background-color: #2d303a;
+}
+
+.portfolio::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+
+  width: 100%;
+  height: 6px;
+
+  background-color: #323746;
+}
+
+.portfolio__wrapper {
+  padding: 67px 41px 64px;
+}
+
+.portfolio__title {
+  margin-bottom: 33px;
+
+  color: #666d89;
+}
+
+.portfolio__description {
+  margin-bottom: 17px;
+
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 18px;
+  text-align: left;
+  color: #767e9e;
+}
+
+.portfolio__tags {
+  margin-bottom: 19px;
+}
+
+.tags {
+  display: flex;
+}
+
+.tag {
+  margin-right: 8px;
+  padding: 4px 7px;
+
+  font-weight: 400;
+  line-height: 1.2rem;
+  color: #767e9e;
+
+  border: 1px solid #666d89;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.tag:hover {
+  border: 1px solid #c5c5c5;
+}
+
+.tag_selected {
+  color: #dedede;
+
+  border: 1px solid #c5c5c5;
+}
+
+.layout-4-column {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.portfolio__projects {
+  max-height: 610px;
+  overflow: hidden;
+}
+
+.portfolio__image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 220px;
+  height: 187px;
+  margin-bottom: 20px;
+  overflow: hidden;
+
+  cursor: pointer;
+}
+
+.portfolio__image img {
+  transition: all 0.5s ease-out;
+}
+
+.portfolio__image img:hover {
+  transform: scale(1.2);
 }
