--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 ul {
@@ -19,32 +19,24 @@ html {
 body {
   font-weight: 400;
   font-size: 1.2rem;
-  font-family: Lato, Verdana, sans-serif;
+  font-family: "Lato", Verdana, sans-serif;
+  text-align: justify;
 }
+
+
 
 h2 {
   font-weight: 900;
-  font-size: 30px;
-  line-height: 20px;
+  font-size: 3.0rem;
+  line-height: 2.0rem;
+  letter-spacing: -0.2px;
 }
 
 h3 {
   font-weight: 900;
-  font-size: 18px;
-  line-height: 20px;
-}
-
-.visuallyhidden {
-  position: absolute;
-
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-
-  border: 0;
-
-  clip: rect(0 0 0 0);
+  font-size: 1.8rem;
+  line-height: 1.8rem;
+  letter-spacing: -0.1px;
 }
 
 .wrapper {
@@ -52,41 +44,50 @@ h3 {
   margin: auto;
 }
 
+.layout-3-column {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.layout-4-column {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 /* header ***************************************************/
 
 .header {
-  position: relative;
-
   font-weight: 700;
 
   background: #2d303a;
-}
-
-.header::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-
-  width: 100%;
-  height: 6px;
-
-  background-color: #323746;
+  border-bottom: 6px solid #323746;
 }
 
 .header__wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 34px 40px 41px;
+  padding: 34px 40px 35px;
 }
 
 .logo {
-  font-size: 24px;
-  line-height: 20px;
+  position: relative;
+
+  margin: 0;
+
+  font-size: 2.4rem;
+  line-height: 2.0rem;
   color: #ffffff;
+  text-transform: uppercase;
+  letter-spacing: 0.1px;
 }
 
-.logo span {
+.logo::after {
+  content: "*";
+  position: absolute;
+  top: 0;
+  right: -10px;
+
   color: #e36861;
 }
 
@@ -97,9 +98,10 @@ h3 {
 .navigation__link {
   position: relative;
 
-  margin: 10px 0 0 29px;
+  margin: 10px 0 0 28px;
 
-  line-height: 9px;
+  line-height: 0.9rem;
+  letter-spacing: 0.05px;
 
   cursor: pointer;
 }
@@ -120,6 +122,8 @@ h3 {
 
 .navigation__link a {
   color: #ffffff;
+
+  transition: all 0.3s;
 }
 
 .navigation__link_active a {
@@ -127,52 +131,51 @@ h3 {
 }
 
 .navigation__link a:hover {
-  color: gray;
+  color: #e36861;
 }
 
 /* slider ***************************************************/
 
 .slider {
-  position: relative;
-
   height: 600px;
 
   background: #f06c64;
+  border-bottom: 6px solid #ea676b;
 }
 
-.slider::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
+.slider__wrapper {
+  position: relative;
 
-  width: 100%;
-  height: 6px;
-
-  background-color: #ea676b;
+  padding: 20px 80px;
 }
 
-.slider__wrapper,
 .slider__content {
   position: relative;
+
+  width: 100%;
+  height: 540px;
+  padding: 20px;
 }
 
 .slider__button {
   position: absolute;
-  top: 280px;
+  top: 281px;
 
   width: 16px;
   height: 27px;
 
   cursor: pointer;
   opacity: 1;
+
+  transition: all 0.3s;
 }
 
 .slider__button:hover {
-  opacity: 0.7;
+  opacity: 0.5;
 }
 
 .slider__button_left {
-  left: 40px;
+  left: 42px;
 
   background: url(./assets/images/button-left.png);
 }
@@ -188,63 +191,54 @@ h3 {
 }
 
 .phone__vertical {
-  top: 53px;
-  left: 110px;
+  top: 33px;
+  left: 32px;
 }
 
 .phone__horizontal {
-  top: 173px;
-  left: 424px;
+  top: 154px;
+  left: 345px;
 }
+
+/* our-services ***************************************************/
 
 .our-services {
-  position: relative;
-
-  height: 500px;
+  color: #767e9e;
 
   background: #f2f2f2;
-}
-
-.our-services::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-
-  width: 100%;
-  height: 6px;
-
-  background-color: #ffffff;
+  border-bottom: 6px solid #ffffff;
 }
 
 .our-services__wrapper {
-  padding: 67px 40px 20px;
+  padding: 67px 40px 49px;
 }
 
 .our-services__title {
   margin-bottom: 25px;
+
   color: #666d89;
 }
 
 .our-services__description {
   margin-bottom: 25px;
-  color: #767e9e;
-  font-weight: 300;
-  font-size: 18px;
-  line-height: 30px;
-  text-align: justify;
-}
 
-.layout-3-column {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  font-weight: 300;
+  font-size: 1.8rem;
+  line-height: 3.0rem;
 }
 
 .service {
   position: relative;
 
   width: 300px;
-  padding: 20px 0 10px 80px;
+  max-height: 112px;
+  margin-bottom: 12px;
+  padding: 20px 0 0 80px;
+  overflow: hidden;
+}
+
+.service:not(:nth-child(3n+3)) {
+  margin-right: 20px;
 }
 
 .service img {
@@ -254,41 +248,28 @@ h3 {
 }
 
 .service__title {
+  margin-bottom: 11px;
+
   color: #666d89;
 }
 
 .service__description {
-  margin-top: 8px;
-  color: #767e9e;
-  line-height: 22px;
-  text-align: justify;
+  line-height: 2.1rem;
 }
 
 /* portfolio ***************************************************/
 
 .portfolio {
-  position: relative;
-
   background-color: #2d303a;
-}
-
-.portfolio::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-
-  width: 100%;
-  height: 6px;
-
-  background-color: #323746;
+  border-bottom: 6px solid #323746;
 }
 
 .portfolio__wrapper {
-  padding: 67px 40px 64px;
+  padding: 67px 40px 58px;
 }
 
 .portfolio__title {
-  margin-bottom: 33px;
+  margin-bottom: 32px;
 
   color: #666d89;
 }
@@ -297,10 +278,8 @@ h3 {
   margin-bottom: 17px;
 
   font-weight: 300;
-  font-size: 18px;
-  line-height: 18px;
-  text-align: left;
-  text-align: justify;
+  font-size: 1.8rem;
+  line-height: 1.8rem;
   color: #767e9e;
 }
 
@@ -324,22 +303,18 @@ h3 {
   border: 1px solid #666d89;
   border-radius: 5px;
   cursor: pointer;
+
+  transition: all 0.3s;
 }
 
 .tag:hover {
-  border: 1px solid #c5c5c5;
+  background: #c5c5c5;
 }
 
 .tag_selected {
   color: #dedede;
 
   border: 1px solid #c5c5c5;
-}
-
-.layout-4-column {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 .portfolio__projects {
@@ -359,6 +334,10 @@ h3 {
   cursor: pointer;
 }
 
+.portfolio__image:not(:nth-child(4n+4)) {
+  margin-right: 20px;
+}
+
 .portfolio__image img {
   transition: all 0.5s ease-out;
 }
@@ -370,28 +349,18 @@ h3 {
 /* about-us ***************************************************/
 
 .about-us {
-  position: relative;
+  color: #767e9e;
 
   background-color: #f2f2f2;
-}
-
-.about-us::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-
-  width: 100%;
-  height: 6px;
-
-  background-color: #ffffff;
+  border-bottom: 6px solid #ffffff;
 }
 
 .about-us__wrapper {
-  padding: 66px 40px 71px;
+  padding: 67px 40px 65px;
 }
 
 .about-us__title {
-  margin-bottom: 27px;
+  margin-bottom: 26px;
 
   color: #666d89;
 }
@@ -400,17 +369,12 @@ h3 {
   margin-bottom: 45px;
 
   font-weight: 300;
-  font-size: 18px;
-  line-height: 30px;
-  text-align: left;
-  text-align: justify;
-  color: #767e9e;
+  font-size: 1.8rem;
+  line-height: 3.0rem;
 }
 
-.layout-3-column {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+.about-us__employee:not(:nth-child(3n+3)) {
+  margin-right: 20px;
 }
 
 .employee {
@@ -418,11 +382,11 @@ h3 {
 }
 
 .employee__content {
-  margin-top: 15px;
+  margin-top: 14px;
 }
 
 .employee__title {
-  margin-bottom: 10px;
+  margin-bottom: 11px;
   overflow: hidden;
 
   color: #666d89;
@@ -433,16 +397,14 @@ h3 {
 .employee__description {
   margin-bottom: 24px;
 
-  line-height: 20px;
-  text-align: justify;
-  color: #767e9e;
+  line-height: 2.1rem;
 }
 
 .employee__contacts {
   display: flex;
 }
 
-.employee__social {
+.employee__social:not(:last-child) {
   margin-right: 8px;
 }
 
@@ -450,6 +412,8 @@ h3 {
   display: inline-block;
   width: 32px;
   height: 32px;
+
+  transition: all 0.3s;
 }
 
 .social-ico_facebook {
@@ -487,26 +451,14 @@ h3 {
 /* get-a-quote ***************************************************/
 
 .get-a-quote {
-  position: relative;
-
   color: #f0d8d9;
 
   background-color: #f06c64;
-}
-
-.get-a-quote::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-
-  width: 100%;
-  height: 6px;
-
-  background-color: #ea676b;
+  border-bottom: 6px solid #ea676b;
 }
 
 .get-a-quote__wrapper {
-  padding: 67px 40px 18px;
+  padding: 67px 40px 12px;
 }
 
 .get-a-quote__title {
@@ -517,9 +469,8 @@ h3 {
   margin-bottom: 44px;
 
   font-weight: 300;
-  font-size: 18px;
-  line-height: 30px;
-  text-align: justify;
+  font-size: 1.8rem;
+  line-height: 3.0rem;
 }
 
 .get-a-quote__content {
@@ -543,9 +494,9 @@ h3 {
   width: 100%;
   height: 38px;
   margin-bottom: 16px;
-  padding: 7px 15px 9px;
+  padding: 7px 13px 9px;
 
-  line-height: 22px;
+  line-height: 2.2rem;
   color: #f0d8d9;
 
   background-color: #d6564f;
@@ -553,7 +504,7 @@ h3 {
   border-radius: 5px;
   outline: none;
 
-  transition: all 0.5s;
+  transition: all 0.3s;
 }
 
 .fieldset__input::placeholder {
@@ -565,11 +516,6 @@ h3 {
 .fieldset__input:focus {
   background-color: #d6564f;
   border: 1px solid #666d89;
-}
-
-.fieldset__input:invalid {
-  background-color: #d6564f;
-  border: 1px solid red;
 }
 
 @keyframes autofill {
@@ -593,16 +539,18 @@ textarea.fieldset__input {
 }
 
 .fieldset__button {
-  margin-left: calc(100% - 91px);
+  margin-left: calc(100% - 97px);
   padding: 12px 30px;
 
   color: #f0d8d9;
   text-transform: uppercase;
 
-  background: #666d89;
+  background: #767e9e;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+
+  transition: all 0.3s;
 }
 
 .fieldset__button:hover {
@@ -614,14 +562,13 @@ textarea.fieldset__input {
 }
 
 .sidebar-contact__title {
-  margin-bottom: 8px;
+  margin-bottom: 10px;
 }
 
 .sidebar-contact__description {
   margin-bottom: 20px;
 
-  line-height: 22px;
-  text-align: justify;
+  line-height: 2.2rem;
 }
 
 .sidebar-contact__item {
@@ -629,16 +576,17 @@ textarea.fieldset__input {
 
   padding-left: 23px;
 
-  line-height: 22px;
+  line-height: 2.2rem;
 }
 
 .sidebar-contact__item a {
   color: #f0d8d9;
-  text-decoration: none;
+
+  transition: all 0.3s;
 }
 
 .sidebar-contact__item a:hover {
-  color: #f48c8f;;
+  color: #767e9e;
 }
 
 .sidebar-contact__icon {
@@ -679,11 +627,13 @@ textarea.fieldset__input {
 }
 
 .copyright-container {
-  padding: 9px 1px;
+  padding: 9px 2px;
 
+  font-weight: 700;
   color: #575d74;
+  letter-spacing: -0.3px;
 }
 
-.footer .employee__social:last-child {
+.employee__social:last-child {
   margin-right: 0;
 }
