--- a/style.css
+++ b/style.css
@@ -57,6 +57,10 @@ h3 {
 /* header ***************************************************/
 
 .header {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+
   font-weight: 700;
 
   background: #2d303a;
@@ -141,20 +145,38 @@ h3 {
 
   background: #f06c64;
   border-bottom: 6px solid #ea676b;
+
+  transition: all 0.5s ease-in-out;
+}
+
+.slider_blue {
+  background: #648bf0;
+  border-color: #648bf0;
 }
 
 .slider__wrapper {
   position: relative;
 
   padding: 20px 80px;
+  overflow: hidden;
 }
 
 .slider__content {
-  position: relative;
-
   width: 100%;
   height: 540px;
-  padding: 20px;
+}
+
+.slider__item {
+  position: relative;
+
+  display: none;
+
+  animation: 0.5s ease-in-out;
+}
+
+.slider__item_active,
+.slider__item_next {
+  display: block;
 }
 
 .slider__button {
@@ -190,14 +212,104 @@ h3 {
   position: absolute;
 }
 
-.phone__vertical {
+.phone-vertical {
   top: 33px;
   left: 32px;
 }
 
-.phone__horizontal {
+.phone-horizontal {
   top: 154px;
   left: 345px;
+}
+
+
+.dark-screen {
+  position: absolute;
+
+  display: none;
+
+  background: black;
+}
+
+
+.phone-vertical__dark-screen {
+  top: 65px;
+  left: 14px;
+
+  width: 188px;
+  height: 333px;
+}
+
+.phone-horizontal__dark-screen {
+  top: 14px;
+  left: 60px;
+
+  width: 333px;
+  height: 188px;
+}
+
+.dark-screen_show {
+  display: block;
+}
+
+.phone-button {
+  position: absolute;
+
+  width: 42px;
+  height: 42px;
+
+  border-radius: 50%;
+}
+
+.phone-vertical__button {
+  bottom: 36px;
+  left: 87px;
+}
+
+.phone-horizontal__button {
+  bottom: 114px;
+  left: 8px;
+}
+
+.phone-group {
+  top: 23px;
+  left: 172px;
+}
+
+.to-left {
+  animation-name: left;
+}
+
+.from-right {
+  animation-name: right;
+}
+
+.to-right {
+  animation-name: right;
+  animation-direction: reverse;
+}
+
+.from-left {
+  animation-name: left;
+  animation-direction: reverse;
+}
+
+@keyframes left {
+  from {
+    left: 0;
+  }
+  to {
+    left: -100%;
+  }
+}
+
+@keyframes right {
+  from {
+    left: 100%;
+  }
+  to {
+    left: 0;
+  }
 }
 
 /* our-services ***************************************************/
